Current
Fixed: GITHUB-2327: Parameters not present on skipped Test (Eric Kubenka)
Fixed: GITHUB-2232: Null Pointer Exception in ConfigInvoker.setMethodInvocationFailure (Krishnan Mahadevan)
Fixed: GITHUB-2312: IAnnotationTransformer called multiple time Discrepancy between 6.x and 7.x (Krishnan Mahadevan)
New:   GITHUB-2315: TextReporter console output does not nicely print native array data parameters (James Sassano)
Fixed: GITHUB-2301: Add support for object-based reporter configurations (Scott Babcock)
New: Deprecate org.testng.ReporterConfig (Julien Herr)
Fixed: GITHUB-2300: Vulnerable Dependency: Please upgrade JCommander to 1.75 or above (Krishnan Mahadevan)
Fixed: GITHUB-2182: Removed exception catching as valid behaviour
Fixed: GITHUB-2273: Use SPI to load Guice modules (Bartosz Popiela)
Fixed: GITHUB-2280: Prevent Retry from happening endlessly (Paweł Nadolski)
Fixed: GITHUB-553:  Better error message when dealing with classes having both Constructor and Factory methods (Krishnan Mahadevan)
Fixed: GITHUB-2267: RetryAnalyzer is not set properly and consistent when using dataprovider (Eric Kubenka)
Fixed: GITHUB-2266: Support Test retries via Callbacks (Krishnan Mahadevan)
Fixed: GITHUB-2209: @Before and @After are not executed as expected when a combination of class and method level grouping is applied (Krishnan Mahadevan)
Fixed: GITHUB-2259: Missing configuration for ServiceLoader Listeners (Krishnan Mahadevan)
Fixed: GITHUB-2257: Facilitate retry of configuration methods via call backs (Krishnan Mahadevan)
Fixed: GITHUB-2223: testng 7.1.0 java.lang.ClassNotFoundException: com.google.inject.Stage (Krishnan Mahadevan)
Fixed: GITHUB-217: Configure TestNG to fail when all tests are skipped (Krishnan Mahadevan)
Fixed: GITHUB-2255: Ensure test method parameters are visible in BeforeMethod config method (Krishnan Mahadevan)
Fixed: GITHUB-2251: NullPointerException at test with timeOut (Krishnan Mahadevan)