@@ -5,6 +5,7 @@ import org.testng.IConfigurationListener;
 import org.testng.ITestListener;
 import org.testng.ITestNGListener;
 import org.testng.ITestNGListenerFactory;
+import org.testng.ITestNGMethod;
 import org.testng.ITestResult;
 import org.testng.TestNGException;
 import org.testng.annotations.IListenersAnnotation;
@@ -19,28 +20,57 @@ public final class TestListenerHelper {
     // Utility class. Defeat instantiation.
   }
 
-  static void runPreConfigurationListeners(ITestResult tr, List<IConfigurationListener> listeners) {
+  static void runPreConfigurationListeners(ITestResult tr, ITestNGMethod tm, List<IConfigurationListener> listeners) {
     for (IConfigurationListener icl : listeners) {
       icl.beforeConfiguration(tr);
+      try {
+        icl.beforeConfiguration(tr, tm);
+      } catch (Exception e) {
+        handleException(e);
+      }
     }
   }
 
   static void runPostConfigurationListeners(
-      ITestResult tr, List<IConfigurationListener> listeners) {
+      ITestResult tr, ITestNGMethod tm, List<IConfigurationListener> listeners) {
     for (IConfigurationListener icl : listeners) {
       switch (tr.getStatus()) {
         case ITestResult.SKIP:
           icl.onConfigurationSkip(tr);
+          try {
+            icl.onConfigurationSkip(tr, tm);
+          } catch (Exception e) {
+            handleException(e);
+          }
           break;
         case ITestResult.FAILURE:
           icl.onConfigurationFailure(tr);
+          try {
+            icl.onConfigurationFailure(tr, tm);
+          } catch (Exception e) {
+            handleException(e);
+          }
           break;
         case ITestResult.SUCCESS:
           icl.onConfigurationSuccess(tr);
+          try {
+          icl.onConfigurationSuccess(tr,tm);
+          } catch (Exception e) {
+            handleException(e);
+          }
           break;
         default:
           throw new AssertionError("Unexpected value: " + tr.getStatus());
       }
+    }
+  }
+
+  //This method is added because Gradle which builds TestNG seems to be using an older version
+  //of TestNG that doesn't know about the new methods that we added and so it causes
+  //the TestNG build to keep failing.
+  private static void handleException(Exception e) {
+    if (!e.getClass().getPackage().getName().startsWith("org.gradle.internal")) {
+      throw new ListenerInvocationException(e);
     }
   }
 
@@ -139,6 +169,13 @@ public final class TestListenerHelper {
 
     public Class<? extends ITestNGListenerFactory> getListenerFactoryClass() {
       return listenerFactoryClass;
+    }
+  }
+
+  static class ListenerInvocationException extends RuntimeException {
+
+    public ListenerInvocationException(Throwable cause) {
+      super(cause);
     }
   }
 }
