@@ -1,4 +1,5 @@
 Current
+Fixed: GITHUB-2328: Add ability to get test method for which configuration method was called (Krishnan Mahadevan)
 Fixed: GITHUB-2327: Parameters not present on skipped Test (Eric Kubenka)
 Fixed: GITHUB-2232: Null Pointer Exception in ConfigInvoker.setMethodInvocationFailure (Krishnan Mahadevan)
 Fixed: GITHUB-2312: IAnnotationTransformer called multiple time Discrepancy between 6.x and 7.x (Krishnan Mahadevan)
